pre修改：添加对事件的支持&API方法的修正